--- a/my-awesome-lib/package.json
+++ b/my-awesome-lib/package.json
@@ -1,6 +1,23 @@
 {
   "name": "my-awesome-lib",
   "version": "0.0.1",
+  "description": "A modern Angular component library providing reusable building blocks with Material Design theming",
+  "author": "benhalverson",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/benhalverson/ui-component-app.git",
+    "directory": "my-awesome-lib"
+  },
+  "keywords": [
+    "angular",
+    "components",
+    "material-design",
+    "ui-library"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
   "peerDependencies": {
     "@angular/common": "^20.3.0",
     "@angular/core": "^20.3.0",
@@ -11,6 +28,5 @@
     "@analogjs/vite-plugin-angular": "~1.19.1",
     "@nx/vite": "22.0.2"
   },
-  "sideEffects": false,
-  "private": false
+  "sideEffects": false
 }
