--- a/.github/workflows/publish-my-awesome-lib.yml
+++ b/.github/workflows/publish-my-awesome-lib.yml
@@ -53,4 +53,4 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
       - name: Version, changelog, and publish (single command)
-        run: pnpm nx release --projects=my-awesome-lib --first-release --yes
+        run: pnpm nx release --projects=my-awesome-lib --yes
