--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/material": "^20.2.10",
     "@angular/platform-browser": "~20.3.0",
     "@angular/router": "~20.3.0",
+    "@ngrx/signals": "^20.1.0",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
@@ -32,6 +33,7 @@
     "@angular/compiler-cli": "~20.3.0",
     "@angular/language-service": "~20.3.0",
     "@eslint/js": "^9.8.0",
+    "@ngrx/store": "^20.1.0",
     "@nx/angular": "22.0.2",
     "@nx/devkit": "22.0.2",
     "@nx/eslint": "22.0.2",
